--- a/src/index.css
+++ b/src/index.css
@@ -21,8 +21,8 @@
     }
 
     .btn-shadow {
-        @apply transition-all active:translate-y-1  active:[box-shadow:0_0px_0_0_#AA2233]
-        transition-all duration-150  border-[1px] [box-shadow:0_4px_0_0_#3b82f6] border-[#3b82f6] dark:[box-shadow:0_4px_0_0_#AA2233] dark:border-[#AA2233] z-40 flex justify-center items-center rounded-full w-[50px] h-[50px] cursor-pointer bg-[#1A1A1D] dark:bg-[#0c0c0c];
+        @apply transition-all active:translate-y-1  active:[box-shadow:0_0px_0_0_#AA2233] dark:active:[box-shadow:0_0px_0_0_#3b82f6]
+        transition-all duration-150  border-[2px] dark:border-[1px] [box-shadow:0_4px_0_0_#3b82f6] border-[#3b82f6] dark:border-[#AA2233] dark:[box-shadow:0_4px_0_0_#AA2233] z-40 flex justify-center items-center rounded-full w-[50px] h-[50px] cursor-pointer bg-[#1A1A1D] dark:bg-[#0c0c0c];
     }
 
     .text-emph {
