--- a/src/styles/custom-styles.css
+++ b/src/styles/custom-styles.css
@@ -1,51 +1,102 @@
+* {
+    box-sizing: border-box;
+    min-width: 0;
+    min-height: 0;
+    margin: 0;
+    padding: 0;
+}
+
+.slides {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 section {
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    width: min(100vw, 190vh) !important;
     display: flex !important;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 1vmin 1vmin 1vmin 1vmin;
-    box-sizing: border-box !important;
 }
 
 p {
-    font-size: 2.5vmin;
+    font-size: min(1.6vw, 3.1vh) !important;
+    margin: min(0.5vw, 1vh) 0 !important;
 }
 
 a {
-    text-decoration: underline;
+    text-decoration: underline !important;
 }
 
-h1, h2 {
-    text-shadow: none !important;
+h5 {
+    font-size: min(2vw, 3.9vh) !important;
 }
 
-ul,
-ol {
-    font-size: 2.5vmin;
-    margin: 0 !important;
-    padding: 0 !important;
+h4 {
+    font-size: min(2.3vw, 4.5vh) !important;
 }
 
-code {
+ul li,
+ol li {
+    font-size: min(1.6vw, 3.1vh) !important;
+}
+
+table {
+    font-size: min(1.7vw, 3vh) !important;
+}
+
+code, pre code table {
     line-height: 1.3;
-    font-size: 2.4vmin;
+    font-size: min(1.5vw, 3vh);
 }
 
+pre code {
+    max-height: unset !important;
+}
+
+.big-code-long {
+    width: min(90vw, 180vh);
+    height: min(38vw, 76vh);
+}
+
+.big-code {
+    width: min(80vw, 160vh);
+    height: min(38vw, 76vh);
+}
+
+.med-code-long {
+    width: min(90vw, 180vh);
+    height: min(30vw, 60vh);
+}
+
+.med-code {
+    width: min(60vw, 120vh);
+    height: min(30vw, 60vh);
+}
+
+.small-code-long {
+    width: min(90vw, 180vh);
+    height: min(25vw, 50vh);
+}
+
+.small-code {
+    width: min(40vw, 80vh);
+    height: min(25vw, 50vh);
+}
 
 li:not(:last-child) {
-    margin-bottom: 1.5%;
+    margin-bottom: min(0.8vw, 1.6vh);
 }
 
 
 .title {
-    font-size: 7vmin !important;
+    font-size: min(3.8vw, 7.4vh) !important;
+    font-weight: bold;
 }
 
 .subtitle {
-    font-size: 3vmin !important;
+    font-size: min(2.15vw, 4.15vh) !important;
     font-style: italic;
 }
 
@@ -61,15 +112,15 @@ li:not(:last-child) {
 }
 
 .small {
-    font-size: 1.5vmin;
+    font-size: min(1.5vw, 2.9vh) !important;
 }
 
-.xmall {
-    font-size: 1vmin;
+.xsmall {
+    font-size: min(1.2vw, 2.2vh) !important;
 }
 
 .big {
-    font-size: 2.5vmin;
+    font-size: min(2.1vw, 4vh) !important;
 }
 
 .emph {
@@ -77,7 +128,7 @@ li:not(:last-child) {
 }
 
 .bottom-text {
-    font-size: 1.5vmin;
+    font-size: min(1vw, 2vh);
     position: absolute;
     bottom: 0;
     margin-left: auto;
@@ -87,8 +138,29 @@ li:not(:last-child) {
     text-align: center;
 }
 
+.bottom-text a {
+    font-size: min(1vw, 2vh);
+}
+
 .reveal .controls {
     bottom: 30px;
+}
+
+.slide-context {
+    position: absolute;
+    top: 0;
+    right: min(3vw, 6vh);
+    font-size: 2.1vw;
+    font-weight: 100;
+    letter-spacing: min(.05vw, .1vh);
+}
+
+.ql-hidden {
+    display: none;
+}
+
+#code-container {
+    overflow: hidden !important;
 }
 
 
